# code-prism

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  EXECUTION_PAGE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_BLUEPRINT.md  QUICK_START_EXECUTION.md  README.ja.md  README.md  README.zh-CN.md  STRUCTURE_AND_MODULES.md  TESTING_GUIDE.md  codeprism.yaml  custom_config.yaml  custom_java_complexity.wasm
.claude/: settings.local.json
.github/workflows/: release.yml
.sqlx/: query-2ad49b225bc0f3f98447e486afb19c91521a9e1c0ce3bb8b2095ce6b4e44bccb.json  query-764e96ad5fdcee722369f21ce17970121ee7fd796f1a2922c21fca188ada0e48.json  query-f88711da59a90b0e0d210649cd6f5506ca6377e1aacc399d6840ca6afc7ae332.json
crates/analyzer/: Cargo.toml
crates/analyzer/src/: lib.rs  script.rs  wasm.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/database/: Cargo.toml  build.rs
crates/database/src/: init.sql  lib.rs
crates/git_scanner/: Cargo.toml
crates/git_scanner/src/: lib.rs
crates/git_scanner/tests/: integration.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: aggregation.rs  assets.rs  config.rs  git_cache.rs  git_routes.rs  lib.rs  routes.rs  template_routes.rs
crates/server/tests/: api_tests.rs
custom_analyzers/: gosu_complexity.py  java_complexity.py
migrations/: 20240117000000_initial_schema.sql  20240117000001_add_tech_stack_to_file_changes.sql  20240117000002_add_tech_stack_to_metrics.sql  20240117000003_combine_tables.sql  20240117000004_split_change_values.sql  20240117000005_create_scan_jobs.sql  20240117000006_create_scan_summaries.sql  20240117000007_unify_projects.sql
schemas/: codeprism-config.schema.json
src/: main.rs
web/: package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  test-setup.ts
web/src/components/: ChartRenderer.tsx  ConfigPage.tsx  Dashboard.test.tsx  Dashboard.tsx  ExecutePage.tsx
web/src/components/dashboard/: ChildrenViewer.tsx  MatchDetailView.tsx  TechStackTabs.tsx
web/src/components/layout/: Header.tsx  LanguageSwitcher.tsx  Sidebar.tsx
web/src/components/ui/: card.tsx
web/src/components/widgets/: LogDistributionWidget.tsx  MetricCard.tsx
web/src/contexts/: AppContext.tsx
web/src/i18n/: index.ts
web/src/i18n/locales/: en.json  ja.json  zh-CN.json
web/src/services/: data.ts
