[workspace]
members = [
    "crates/core",
    "crates/database",
    "crates/git_scanner",
    "crates/analyzer",
    "crates/server",
]
resolver = "2"

[package]
name = "codeprism"
version = "0.1.0"
edition = "2024"

[dependencies]
codeprism-core = { path = "crates/core" }
codeprism-database = { path = "crates/database" }
codeprism-scanner = { path = "crates/git_scanner" }
codeprism-analyzer = { path = "crates/analyzer" }
codeprism-server = { path = "crates/server" }

anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
