[package]
name = "codeprism-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bytes = "1.11.0"
codeprism-core = { version = "0.1.0", path = "../core" }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
wasi-common = "18.0.2"
wasmtime = "18.0.2"
wasmtime-wasi = "18.0.2"
