[package]
name = "codeprism-scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
codeprism-analyzer = { version = "0.1.0", path = "../analyzer" }
codeprism-core = { version = "0.1.0", path = "../core" }
codeprism-database = { version = "0.1.0", path = "../database" }
git2 = "0.20.3"
ignore = "0.4.25"
indicatif = "0.18.3"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
indexmap = { version = "2.9.0", features = ["serde"] }
serde_json = "1.0.149"
tempfile = "3.24.0"
tokio = { version = "1.49.0", features = ["full"] }
